change buttons to populate custom image and fixed content alignment

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -49,12 +49,17 @@ h3 {
 }
 
 .img02 {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
+}
+.img03 {
+  width: 280px;
+  height: 226px;
 }
 
 ul {
-  list-style-type: none;
+  text-align: center;
+  list-style: inside;
   margin: 0;
   padding: 0;
   overflow: hidden;
@@ -62,7 +67,6 @@ ul {
   color: blanchedalmond;
 }
 .button {
-  /* background-color: #e7c567;  */
   background-color: #fd9737; 
   border: solid;
   color: rgb(83, 38, 8);
@@ -71,30 +75,46 @@ ul {
   text-decoration: none;
   display: inline-block;
   font-size: 11px;
-  transition-duration: 0.8s;
+  transition-duration: 0.2s;
 }
 .button:hover {
-  background-color: #e9c345; 
+  background-color: #f07400; 
   color: rgb(83, 38, 8);
 }
 
 #devour{
-  background-color: #fd9737; 
-  border: solid;
-  color: rgb(83, 38, 8);
-  padding: 10px 35px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 11px;
-  transition-duration: 0.8s;
-  border-radius: 50%;
+background-color: rgb(99, 53, 0); 
+padding: 10px 35px;
+border: none;
+width:20%; 
+float:left;
+
+}
+.devour-btn{
+background-color: rgb(99, 53, 0); 
+border: none;
+text-align: center;
+text-decoration: none;
+font-size: 11px;
+color: rgb(255, 222, 152);
+}
+.imgb{
+width: 120px;
+height: 90px; 
+background-image: url( ./assets/img/burger02.png); !important
 }
 #burger-list {
-  color: lightgoldenrodyellow;
+  color: rgb(255, 222, 152);
+  display: inline-block;
+  text-align:center;
+  list-style: none;
+  width: 100%;
 }
 .devoured-burgers {
   color: lightgoldenrodyellow;
+  display: list-item;
+  text-align:center;
+  list-style: none;
 }
 #burger-input{
   background-color: rgb(238, 167, 102);
@@ -110,4 +130,6 @@ ul {
   opacity: 1; /* Firefox */
   font-size: 12px;
   text-align: center;
+  padding: 5px;
+  white-space: pre-wrap;
 }
